# mimp

./: .gitignore  README.md  mimp.cabal
coq/: AST.v  Exec.v  State.v
examples/: fact.mimp  function.mimp  memory.mimp  primes.mimp  rem.mimp  times_divide.mimp
src/: AST.hs  Exec.hs  Lexer.x  Main.hs  Parser.hs
